# pydantic-ome-ngff

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  example.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml
api/v04/axis/: index.html
api/v04/label/: index.html
api/v04/multiscale/: index.html
api/v04/plate/: index.html
api/v04/transform/: index.html
docs/: index.md
docs/api/v04/: axis.md  label.md  multiscale.md  multiscales.md  plate.md  transform.md  transforms.md
src/pydantic_ome_ngff/: __about__.py  __init__.py  _version.py  base.py  tree.py  utils.py
src/pydantic_ome_ngff/latest/: __init__.py  axes.py  axis.py  base.py  coordinateTransformations.py  imageLabel.py  label.py  multiscale.py  multiscales.py  plate.py  transform.py  transforms.py  well.py
src/pydantic_ome_ngff/v04/: __init__.py  axes.py  axis.py  cli.py  coordinateTransformations.py  imageLabel.py  label.py  multiscale.py  multiscales.py  plate.py  transform.py  transforms.py  utils.py  well.py
src/pydantic_ome_ngff/v05/: __init__.py  axes.py  coordinateTransformations.py  imageLabel.py  multiscales.py  plate.py  well.py
tests/: conftest.py  test_base.py  test_docs.py  test_latest.py  test_utils.py  test_v04.py  test_v05.py
tests/fixtures/latest/: image-label.json  labels.json  multiscales.json  plate0.json  plate1.json  well0.json  well1.json
tests/fixtures/v04/: image-label.json  multiscales.json  plate0.json  plate1.json  well0.json  well1.json
tests/latest/: test_multiscales.py
tests/v04/: test_axis.py  test_label.py  test_multiscales.py  test_transform.py  test_utils.py
