[tool.poetry]
name = "pydantic-ome-ngff"
version = "0.2.3"
description = "Pydantic models for the OME-NGFF"
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pydantic_ome_ngff", from="src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
isort = "^5.12.0"
jsonschema = "^4.17.3"
pytest = "^7.2.1"
mypy = "^1.0.1"
requests = "^2.28.2"
pytest-cov = "^4.0.0"
black = "22.12.0"
ruff = "0.0.245"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true